@@ -14,6 +14,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+import com.github.vlsi.gradle.dsl.configureEach
+import org.gradle.internal.os.OperatingSystem
+
 dependencies {
     api(project(":core"))
 
@@ -29,4 +32,18 @@ dependencies {
     testImplementation("org.apache.commons:commons-lang3")
     testImplementation(project(":core"))
     testImplementation(project(":testkit"))
+}
+
+plugins.withType<JavaPlugin> {
+    tasks {
+        configureEach<Test> {
+            // Tests disabled on Windows due to failures. Arrow is not tested on Windows:
+            // https://arrow.apache.org/docs/java/install.html#system-compatibility
+            enabled = !OperatingSystem.current().isWindows
+            // The following JVM options are required when using certain JDKs >= 9
+            // https://arrow.apache.org/docs/java/install.html#java-compatibility
+            jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+            jvmArgs("--add-opens=java.base/java.nio=ALL-UNNAMED")
+        }
+    }
 }
